--- a/html/index.html
+++ b/html/index.html
@@ -245,26 +245,49 @@
         <div class="bg_number">50-50-50</div>
       </div>
     </section>
-    <div class="examples" id="examples"> 
+    <div class="examples example_index" id="examples">
       <div class="main_container example_main_container">
         <h4>Примеры работы комиссаров и ремонта после ДТП</h4>
         <p>Здесь вы найдете примеры работы наших комиссаров, а также примеры восстановления авто после ДТП в нашем собственном автосервисе.</p>
-        <div class="tab d-flex justify-content-center align-items-center"><a class="active" href="#">Работа аваркомов</a><a href="#">Ремонт после ДТП </a></div>
-        <div class="swiper card_1 card_end"> 
-          <div class="swiper-wrapper">
-            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_11.png" alt="">
-                <div class="text">Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.</div></a></div>
-            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_22.png" alt="">
-                <div class="text">
-                   Совместная работа с ГИБДД, скорой
-                  и участниками ДТП. Эвакуированы
-                  все авто, оформлено честно,
-                  виновным признано. В последствии
-                  оценка ущерба и помощь в
-                  «выбивании» КАСКО за «тотал».
-                </div></a></div>
-            <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_33.png" alt="">
-                <div class="text"> Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                </div></a></div>
+        <div class="tab d-flex justify-content-center align-items-center"><a class="active" data-id="pills-home">Работа аваркомов</a><a data-id="pills-profile">Ремонт после ДТП </a></div>
+        <div class="tab-content" id="pills-tabContent">
+          <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+            <div class="swiper card_1 card_end"> 
+              <div class="swiper-wrapper">
+                <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_11.png" alt="">
+                    <div class="text">Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.</div></a></div>
+                <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_22.png" alt="">
+                    <div class="text">
+                       Совместная работа с ГИБДД, скорой
+                      и участниками ДТП. Эвакуированы
+                      все авто, оформлено честно,
+                      виновным признано. В последствии
+                      оценка ущерба и помощь в
+                      «выбивании» КАСКО за «тотал».
+                    </div></a></div>
+                <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_33.png" alt="">
+                    <div class="text"> Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                </div></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+            <div class="swiper card_1 card_end"> 
+              <div class="swiper-wrapper">
+                <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_11.png" alt="">
+                    <div class="text">Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.</div></a></div>
+                <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_22.png" alt="">
+                    <div class="text">
+                       Совместная работа с ГИБДД, скорой
+                      и участниками ДТП. Эвакуированы
+                      все авто, оформлено честно,
+                      виновным признано. В последствии
+                      оценка ущерба и помощь в
+                      «выбивании» КАСКО за «тотал».
+                    </div></a></div>
+                <div class="swiper-slide"><a class="card_content" href="#"> <img src="./images/example_slide_33.png" alt="">
+                    <div class="text"> Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                </div></a></div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="example_card_1_pagination"></div>
@@ -316,12 +339,6 @@
       </div>
     </div>
     <div class="main_container index_bottom_text"><img src="./images/index_bottom_img.png" alt="">
-      <div class="bottom_text"> 
-        <p>
-           Обращаясь в службу помощи при ДТП «50-50-50», вы получаете квалифицированную помощь независимо от степени тяжести аварии. Наши сотрудники готовы предложить свои услуги на любом этапе оформления документов и решения необходимых вопросов. Всего через 15 минут после звонка, к вам прибудет специалист, эксперт по ДТП. Если вы <span>арендовали авто в Калининграде</span>и попали на нем в ДТП - звоните! Мы поможем и в таком случае, чтобы владельцы автопроката вас не провели.</p>
-        <p>
-           Нередко случаются ситуации, когда авария незначительная и без пострадавших, но при этом стороны не могут прийти к соглашению, кто виновен. Чтобы не привлекать дорожную инспекцию к ситуации, стоит обратиться к аварийному комиссару. Опытный специалист проведет оценку ситуации и проработает все дорожные улики и свидетельства. Таким образом, будет установлен ущерб, причиненным сторонам. Проще говоря, такой спецпосредник поможет сторонам в конце концов справедливо договориться.</p>
-      </div>
       <div class="bottom_text_media"> 
         <h2 class="main_title">Стиль и размер h2-заголовка</h2>
         <p class="description">Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.</p>
